--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "fork-ts-checker-webpack-plugin": "^6.2.10",
     "vue-jest": "^5.0.0-0"
   }
 }
