--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "@capacitor/app": "1.0.1",
     "@capacitor/core": "3.0.1",
     "@capacitor/haptics": "1.0.1",
@@ -21,9 +22,14 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "@vue/apollo-composable": "^4.0.0-alpha.12",
+    "@vue/apollo-option": "^4.0.0-alpha.11",
     "@vue/cli-plugin-typescript": "^4.5.13",
+    "@vue/composition-api": "^1.0.0-rc.12",
     "@vue/eslint-config-typescript": "^7.0.0",
     "core-js": "^3.6.5",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.4",
     "typescript": "^4.3.2",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
