--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/haptics": "1.0.1",
     "@capacitor/keyboard": "1.0.1",
     "@capacitor/status-bar": "1.0.1",
+    "@ionic/storage": "^3.0.4",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@types/jest": "^26.0.23",
@@ -31,9 +32,11 @@
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.4",
     "typescript": "^4.3.2",
+    "vee-validate": "^4.4.5",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@capacitor/cli": "3.0.1",
