--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:staging": "vue-cli-service serve --mode staging",
+    "serve:prod": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -31,11 +33,13 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.4",
+    "secure-ls": "^1.2.6",
     "typescript": "^4.3.2",
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0-beta.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
