--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@capacitor/haptics": "1.0.1",
     "@capacitor/keyboard": "1.0.1",
     "@capacitor/status-bar": "1.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@ionic/storage": "^3.0.4",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
@@ -33,6 +37,8 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.4",
+    "sass": "^1.35.1",
+    "sass-loader": "^10",
     "secure-ls": "^1.2.6",
     "typescript": "^4.3.2",
     "vee-validate": "^4.4.5",
