--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "@types/jest": "^26.0.23",
+    "@types/vue-cropperjs": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "@vue/apollo-composable": "^4.0.0-alpha.12",
@@ -43,6 +44,7 @@
     "typescript": "^4.3.2",
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0-0",
+    "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.0.0-beta.3",
